src/index.css
@font-face {
    font-family: "Anonymous Pro";
    src: url("./assets/fonts/anonymouspro-2o73w-webfont.woff2") format("woff2");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Anonymous Pro";
    src: url("./assets/fonts/anonymousprobold.woff2") format("woff2");
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Montserrat";
    src: url("./assets/fonts/montserratextrabold-qz7rx-webfont.woff2") format("woff2");
    font-weight: 800;
    font-style: normal;
    font-display: swap;
}

@import "tailwindcss";

@layer base {
    :root {
        --font-anonymous: "Anonymous Pro", sans-serif;
        --font-montserrat: "Montserrat", sans-serif;
    }
}

